--- a/style.css
+++ b/style.css
@@ -1,66 +1,58 @@
-body{
-    margin: 60px;
+body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
-    background-color: rgb(23, 23, 23);
-}
-#calculator{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #262626;
-    border-radius: 15px;
-    max-width: 500px;
-    overflow: hidden;
-    
-}
-#display{
-    width: 100%;
-    padding: 20px;
-    font-size: 5rem;
-    text-align: left;
-    border: none;
-    background-color: rgb(50, 50, 50);
-    color: white;
-    
-    
-}
-#keys{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    padding: 25px;
-
+    margin: 0;
+    background-color: rgb(48, 59, 48);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
-button{
-    width: 100px;
-    height: 100px;
+.calculator {
+    border: 1px solid rgb(195, 195, 255);
     border-radius: 50px;
+    padding: 20px;
     border: none;
-    background-color: rgb(50, 50, 50);
-    color: white;
-    font-size: 3rem;
-    font-weight: bold;
-    cursor: pointer;
+    background-color: gray;
+    box-shadow: 3px 3px 20px black;
 }
-button:hover{
-    background-color: hsl(0, 0%, 40%);
-    transform: translateY(-2px);
-}
-button:active{
-    background-color: hsl(0, 0%, 50%);
-    transform: translateY(2px);
 
+#display {
+    background-color: rgb(246, 246, 255);
+    height: 50px;
+    margin-bottom: 20px;
+    width: 225px;
+    border: none;
+    border-radius: 30px 30px 5px 5px;
+    box-shadow: 0px 0px 2px black;
+    font-size: 26px;
+    text-align: center;
 }
-.opt_btn{
-    background-color: orange;
+
+.buttons {
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px;
+    gap: 10px;
 }
-.opt_btn:hover{
-    background-color: rgb(251, 180, 48);
-    transform: translateY(-2px);
+
+button {
+    background-color: rgb(229, 229, 255);
+    font-size: 26px;
+    height: 3rem;
+    border: none;
+    border-radius: 25px;
+    text-align: center;
+    box-shadow: 0px 0px 8px black;
 }
-.opt_btn:active{
-    background-color: rgb(246, 188, 80);
-    transform: translateY(2px);   
+
+button:last-child {
+    grid-column: span 4;
+    width: 100%;
+    border-radius: 5px 5px 30px 30px;
+    margin-top: 5px;
 }
+
+/* #equals{
+    width: 100;
+} */
